@@ -3,7 +3,7 @@
 #
 # manage_i18n.pl: manage translation files
 #
-#    Copyright (C) 2003, 2005, 2009 Free Software Foundation, Inc.
+#    Copyright (C) 2003, 2005, 2009, 2010 Free Software Foundation, Inc.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -220,8 +220,10 @@ sub merge_i18n_files($$$)
             die "Error copying $translation_file to $translation_file.old\n";
         }
     }
-    #foreach my $lang ($template, @known_languages)
-    die "open $translation_file failed" unless (open (TRANSLATIONS, ">$translation_file"));
+
+    open (TRANSLATIONS, ">$translation_file")
+      || die "open(>$translation_file) failed: $!";
+
     foreach my $lang (@languages)
     {
          my $file = locate_file("$i18n_dir/$lang.thl", $directories);
@@ -237,6 +239,8 @@ sub merge_i18n_files($$$)
          }
          close FILE;
     }
+    print TRANSLATIONS "\n1;\n"; # ensure end with true value
+    close (TRANSLATIONS) || warn "close(>$translation_file) failed: $!";
 }
 
 sub get_language_hashes($$)
